--- a/app/src/main/res/layout/activity_search_art.xml
+++ b/app/src/main/res/layout/activity_search_art.xml
@@ -23,15 +23,15 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="textPersonName"
-                android:text="Name" />
+                android:hint="ie. Rembrandt or Nachtwacht"
+                android:inputType="textPersonName" />
 
             <Button
                 android:id="@+id/search"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Button" />
+                android:text="Search" />
         </LinearLayout>
 
         <ListView
