Added screenshots bettered

--- a/app/src/main/res/layout/activity_favorite.xml
+++ b/app/src/main/res/layout/activity_favorite.xml
@@ -6,8 +6,20 @@
     android:layout_height="match_parent"
     tools:context="com.example.roman.museumapp.FavoriteActivity">
 
-    <ListView
-        android:id="@+id/favoList"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Your favorites:" />
+
+        <ListView
+            android:id="@+id/favoList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
+
 </RelativeLayout>
